demos/23-ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: devops-ingress-tls }
spec:
  ingressClassName: nginx
  tls:
    - hosts: [devops.local]
      secretName: devops-tls
  rules:
    - host: devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: devops-app-svc, port: { number: 80 } }
